@@ -22,7 +22,7 @@ require('../../include/init.php');
 displayHtmlHeader( _("Message Details"), '', FALSE );
 
 sqgetGlobalVar('mailbox', $mailbox, SQ_GET);
-sqgetGlobalVar('passed_id', $passed_id, SQ_GET);
+sqgetGlobalVar('passed_id', $passed_id, SQ_GET, NULL, SQ_TYPE_BIGINT);
 if (!sqgetGlobalVar('passed_ent_id', $passed_ent_id, SQ_GET))
     $passed_ent_id = 0;
 
