@@ -269,6 +269,7 @@ Version 1.5.2 - SVN
   - Add password type option widget
   - Make all submit button names unique on compose screen
   - Make address book file permissions 0600 - same as preference files
+  - Added compatibility with Dovecot's bigint UIDs
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
